# BahRPG

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  download_vendors.sh  gles.h  main.cpp
app/src/main/cpp/cube/: cube.cpp  cube.hpp
app/src/main/cpp/hello_world/: hello_world.cpp  hello_world.hpp
app/src/main/cpp/shader/: shader_program.cpp  shader_program.hpp
app/src/main/java/dev/trindadedev/rpg/: RPG.kt
app/src/main/java/dev/trindadedev/rpg/ui/activities/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
